tests/unsafe/neg/Assume.hs
{-# LIQUID "--Werror" #-}

module Assume where

{-@ assume f :: () @-}
f :: ()
f = ()
